fix: update header smooth animation on scroll, z-index

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -112,7 +112,6 @@ a {
 }
 
 .sticky {
-  position: sticky;
   height: 85px;
   top: 0;
   background-color: #b0d0ff;
